# otoDB

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile.example  README.md  _clear.py  _setup.py  docker-compose.yml  flake.nix  manage.py  otodb.code-workspace  postgresql.conf.example  pyproject.toml  requirements.txt
.github/: dependabot.yml  (+1 more)
backend/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  _clear.py  _setup.py  appconfig.json  compose.yaml  manage.py  openapi.json  otodb-db.sqlite3  pyproject.toml  pytest.ini
backend/app/: __init__.py
backend/otodb/: admin.py  api.py  apps.py  common.py  context_preprocessors.py  discord.py  markdown.py  signals.py  sitemap.py  storage_manager.py  tasks.py  urls.py  views.py
backend/otodb/account/: admin.py  apps.py  models.py
backend/otodb/account/migrations/: 0001_initial.py  0002_invitation.py  0003_invitation_level.py  0004_alter_account_level_alter_invitation_level.py  0005_account_reset_token.py  0006_invitation_created_at_invitation_created_by_and_more.py  0007_alter_invitation_created_at_alter_invitation_used_by.py
backend/otodb/api/: __init__.py  auth.py  comment.py  common.py  history.py  list.py  moderation.py  post.py  profile.py  requests.py  source.py  tag.py  work.py
backend/otodb/management/commands/: app_config.py  fix_merge_directions.py  makemigrations.py  migrate_thumbnails.py  migrate_thumbnails_to_hash.py  openapi_schema.py  prune_works.py  refresh_tag_search.py  restore_merged_works_comments.py  seed_data.py
backend/otodb/migrations/: 0001_initial.py  0001_initial_squashed_0107.py  0002_remove_historicaltagworkinstance_mean_score_and_more.py  0002_worksource_added_by_alter_mediawork_tags_and_more.py  0003_pool_pending_items.py  0003_worksource_rejected.py  0004_alter_songrelation_relation_and_more.py  0004_remove_worksource_rejected_and_more.py  0005_alter_historicaltagsong_options_and_more.py  0006_post.py  0007_alter_post_options_mediasongconnection_and_more.py  0008_historicaltagwork_lang_historicalwikipage_lang_and_more.py  0009_alter_historicaltagsong_options_and_more.py  0010_alter_mediasongconnection_site_and_more.py  0011_remove_historicaltagwork_lang_remove_tagwork_lang_and_more.py  0012_tagsonglangpreference_tagworklangpreference.py  0013_remove_historicaltagwork_wiki_page_and_more.py  0014_alter_worksource_rejection_reason_and_more.py  0015_alter_mediasongconnection_site.py  0016_worksource_uploader_id.py  0017_alter_mediasongconnection_unique_together_and_more.py  0018_alter_mediasongconnection_unique_together_and_more.py  0019_tagworkcreatorconnection_tagworksourceconnection.py  0020_alter_historicaltagworkinstance_instance_imported_from_source_and_more.py  0021_alter_mediasongconnection_site.py  0022_remove_worksource_rejection_reason_poolupstream_and_more.py  0023_alter_tagwork_options_alter_worksource_options_and_more.py  0024_worksource_info_payload.py  0025_alter_tagsong_unique_together_alter_tagsong_slug_and_more.py  0026_alter_worksource_uploader_id.py  0027_rename_song_used_as_source_historicaltagworkinstance_used_as_source_and_more.py  0028_historicalmediasong_bpm_mixed_mediasong_bpm_mixed.py  0028_historicaltagworkinstance_creator_roles_and_more.py  0029_alter_historicaltagworkinstance_creator_roles_and_more.py  0029_historicaltagworkinstance_creator_roles_and_more.py  0030_alter_worksource_options.py  0031_historicaltagwork_deprecated_tagwork_deprecated.py  0032_alter_worksource_media.py  0033_rename_tagworksourceconnection_tagworkmediaconnection_and_more.py  0034_alter_tagwork_options.py  (+103 more)
backend/otodb/models/: __init__.py  connection.py  enums.py  fields.py  media.py  moderation.py  pool.py  posts.py  prefs.py  relations.py  request.py  revision.py  tag.py  work_source.py
backend/otodb/static/: style.css
backend/otodb/templates/: base.html  history.html  search.html  upload_cookies.html
backend/otodb/templates/comments/: delete.html
backend/otodb/templates/lists/: edit.html  list.html  new.html
backend/otodb/templates/query/: tags.html  works.html
backend/otodb/templates/songs/: history.html  new_from_tag.html  relations.html
backend/otodb/templates/tags/: alias.html  edit.html  history.html  tag.html  tag_menu.html  wiki_page.html
backend/otodb/views/: __init__.py  lists.py  songs.py  tags.py  works.py
backend/patches/: yt-dlp+2025.11.12.patch
backend/project/: settings.py  urls.py  wsgi.py
backend/tests/: __init__.py  conftest.py  test_GET_tags_needed.py  test_PUT_post_close.py  test_PUT_post_unclose.py  test_auth.py  test_makemigrations.py  test_revision_tracking.py  test_tag.py  test_work.py
backend/tests/mocks/: video_info.json
(+573 files in other folders)
