[project]
name = "otodb"
version = "0.1.0"
description = "otoDB is a community-driven website consisting of a collaborative user-managed database and wiki."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diff-match-patch>=20241021",
    "django-comments-xtd>=2.10.1",
    "django-cors-headers>=4.9.0",
    "django>=6.0.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "django-ninja>=1.5.1",
    "requests>=2.32.3",
    "django-ordered-model>=3.7.4",
    "granian>=2.4.0",
    "psycopg[binary,pool]>=3.2.6",
    "nh3>=0.2.21",
    "furl>=2.1.4",
    "django-cte>=2.0.0",
    "boto3>=1.40.30",
    "django-dirtyfields>=1.9.9",
    "django-request-cache>=1.5.0",
    "django-tagulous>=2.1.1",
    "sentry-sdk[django]>=2.43.0",
    "patch-package-py>=0.1.3",
    "orjson>=3.11.5",
	"django-tasks-rq>=0.12.0",
	"django-rq>=3.2.2,<4",

	# has corresponding patch in patches/
    "yt-dlp[default]==2026.3.13",

    # included for legacy migrations
    "django-simple-history>=3.10.1",
    "django-markdownfield>=0.11.0",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = [
    "django-silk>=5.4.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
