[project]
name = "otodb"
version = "0.1.0"
description = "otoDB is a community-driven website consisting of a collaborative user-managed database and wiki."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diff-match-patch>=20241021",
    "django-comments-xtd>=2.10.11",
    "django-cors-headers>=4.9.0",
    "django>=6.0.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "django-ninja>=1.6.2",
    "requests>=2.33.1",
    "django-ordered-model>=3.7.4",
    "granian>=2.7.3",
    "psycopg[binary,pool]>=3.3.3",
    "nh3>=0.3.4",
    "furl>=2.1.4",
    "django-cte>=3.0.0",
    "boto3>=1.42.87",
    "django-dirtyfields>=1.9.9",
    "django-request-cache>=1.5.0",
    "django-tagulous>=2.1.1",
    "sentry-sdk[django]>=2.57.0",
    "patch-package-py>=0.1.5",
    "orjson>=3.11.8",
	"django-tasks-rq>=0.12.0",
	"django-rq>=3.2.2,<4",

	# has corresponding patch in patches/
    "yt-dlp[default]==2026.3.17",

    # included for legacy migrations
    "django-simple-history>=3.10.1",
    "django-markdownfield>=0.11.0",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    # "I",    # imports
    "W",    # whitespace
    "B007", # loop variable
]
ignore = [
    "W191", # tabs
]
unfixable = [
    "B007",
]

[dependency-groups]
dev = [
    "django-silk>=5.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
